--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -14,6 +14,7 @@
 .header {
     padding: 2rem 1rem;
     background: var(--brand-color-primary-dark);
+    text-align: center;
 }
 
 .title {
@@ -26,6 +27,25 @@
 .title > span {
     color: var(--base-color-white);
 }
+
+/* Menu */
+
+.menu {
+    margin: 0;
+    padding: 1rem;
+    background: var(--brand-color-primary-dark);
+    text-align: center;
+}
+
+.item {
+    padding: 1rem;
+    color: var(--brand-color-primary-light);
+    font-size: 1.25em;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+/* Section */
 
 .head {
     margin: 0;
@@ -42,13 +62,9 @@
     padding: 1rem;
 }
 
+[type='button'],
+[type='reset'],
+[type='submit'],
 button {
-    appearance: none;
-    padding: 0.5em 1em;
-    border: 2px solid var(--base-color-white);
-    background: var(--base-color-black);
-    color: var(--base-color-white);
-    font-size: 1em;
-    font-weight: bold;
-    text-transform: capitalize;
+    margin: 0.5em 1em 0.5em 0;
 }
